apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@circular.graphql-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/circular.graphql
---
{
    "one_Query_t_0": Connector {
        id: ConnectId {
            label: "one.json http: GET /t/{$args.id!}",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.t),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    ParameterValue {
                        parts: [
                            Text(
                                "t",
                            ),
                        ],
                    },
                    ParameterValue {
                        parts: [
                            Var(
                                VariableExpression {
                                    var_path: "$args.id",
                                    batch_separator: None,
                                    required: true,
                                },
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                ],
                star: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
    },
    "one_T_ts_0": Connector {
        id: ConnectId {
            label: "one.json http: GET /t/{$this.id!}/ts",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(T.ts),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    ParameterValue {
                        parts: [
                            Text(
                                "t",
                            ),
                        ],
                    },
                    ParameterValue {
                        parts: [
                            Var(
                                VariableExpression {
                                    var_path: "$this.id",
                                    batch_separator: None,
                                    required: true,
                                },
                            ),
                        ],
                    },
                    ParameterValue {
                        parts: [
                            Text(
                                "ts",
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                ],
                star: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
    },
}
