apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@interface-object.graphql-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/interface-object.graphql
---
{
    "connectors_Itf_e_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /itfs/{$this.id}/e",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Itf.e),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "localhost",
                        ),
                    ),
                    port: Some(
                        4001,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Text(
                                "itfs",
                            ),
                        ],
                    },
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $this,
                                        location: 7..12,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "id",
                                            location: 13..15,
                                        },
                                    ],
                                    location: 7..15,
                                },
                            ),
                        ],
                    },
                    Component {
                        parts: [
                            Text(
                                "e",
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Path(
            PathSelection {
                path: WithRange {
                    node: Var(
                        WithRange {
                            node: $,
                            range: Some(
                                0..1,
                            ),
                        },
                        WithRange {
                            node: Empty,
                            range: Some(
                                1..1,
                            ),
                        },
                    ),
                    range: Some(
                        0..1,
                    ),
                },
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
    },
    "connectors_Query_itfs_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /itfs",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.itfs),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "localhost",
                        ),
                    ),
                    port: Some(
                        4001,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Text(
                                "itfs",
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "c",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..4,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
    },
    "connectors_Query_itf_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /itfs/{$args.id}",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.itf),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "localhost",
                        ),
                    ),
                    port: Some(
                        4001,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Text(
                                "itfs",
                            ),
                        ],
                    },
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $args,
                                        location: 7..12,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "id",
                                            location: 13..15,
                                        },
                                    ],
                                    location: 7..15,
                                },
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "c",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "d",
                            ),
                            range: Some(
                                5..6,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..6,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
    },
}
