apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@nested_inputs.graphql-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/nested_inputs.graphql
---
{
    "connectors_Query_foo_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /{$args.bar}/{$args.doubleBaz.buzz}/{$args.baz.quux.quaz}",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.foo),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $args,
                                        location: 2..7,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "bar",
                                            location: 8..11,
                                        },
                                    ],
                                    location: 2..11,
                                },
                            ),
                        ],
                    },
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $args,
                                        location: 14..19,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "doubleBaz",
                                            location: 20..29,
                                        },
                                        VariablePathPart {
                                            part: "buzz",
                                            location: 30..34,
                                        },
                                    ],
                                    location: 14..34,
                                },
                            ),
                        ],
                    },
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $args,
                                        location: 37..42,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "baz",
                                            location: 43..46,
                                        },
                                        VariablePathPart {
                                            part: "quux",
                                            location: 47..51,
                                        },
                                        VariablePathPart {
                                            part: "quaz",
                                            location: 52..56,
                                        },
                                    ],
                                    location: 37..56,
                                },
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Path(
            PathSelection {
                path: WithRange {
                    node: Var(
                        WithRange {
                            node: $,
                            range: Some(
                                0..1,
                            ),
                        },
                        WithRange {
                            node: Empty,
                            range: Some(
                                1..1,
                            ),
                        },
                    ),
                    range: Some(
                        0..1,
                    ),
                },
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
        is_success: Default,
    },
}
